--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,148 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  box-sizing: border-box;
+  background-color: black;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+::before,
+::after {
+  box-sizing: inherit;
 }
+
+button {
+  display: block;
+  margin: auto;
+  height: 2em;
+  font-size: 2rem;
+  font-family: cursive;
+  background-color: green;
+  color:white;
+  border-radius: 0.5rem;
+  border-right: 2px solid white;
+  border-bottom: 2px solid white;
+}
+
+.ball {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  align-items: center;
+}
+
+[class*='ball-'] {
+  border:5px solid gray;
+  height: 6rem;
+  width: 6rem;
+  border-radius: 3rem;
+  background-color: hsl(240, 100%, 50%);
+  animation: random 5s infinite;
+}
+@keyframes random1 {
+  0%{
+  }
+  15%{
+    transform:translateX(800px) translateY(600px);
+  }
+  35%{
+    transform:translateX(-600px) translateY(500px);
+  }
+  65%{
+    transform:translateX(400px) translateY(300px);
+  }
+  85%{
+    transform:translateX(-100px) translateY(50px);
+  }
+  100%{
+    
+  }
+}
+@keyframes random2 {
+  0%{
+  }
+  15%{
+    transform:translateX(250px) translateY(-20px);
+  }
+  35%{
+    transform:translateX(600px) translateY(200px);
+  }
+  65%{
+    transform:translateX(-400px) translateY(500px);
+  }
+  85%{
+    transform:translateX(-100px) translateY(50px);
+  }
+  100%{
+    
+  }
+}
+@keyframes random3 {
+  0%{
+  }
+  15%{
+    transform:translateX(-250px) translateY(254px);
+  }
+  35%{
+    transform:translateX(-600px) translateY(500px);
+  }
+  65%{
+    transform:translateX(-200px) translateY(300px);
+  }
+  85%{
+    transform:translateX(-100px) translateY(50px);
+  }
+  100%{
+    
+  }
+}
+@keyframes random4 {
+  0%{
+  }
+  15%{
+    transform:translateX(600px) translateY(400px);
+  }
+  35%{
+    transform:translateX(-600px) translateY(50px);
+  }
+  65%{
+    transform:translateX(300px) translateY(600px);
+  }
+  85%{
+    transform:translateX(-100px) translateY(50px);
+  }
+  100%{
+    
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.ball-1 {
+  background-color: hsl(240, 100%, 50%);
+  animation: random1 3s   infinite  ;
+}
+
+.ball-2 {
+  animation: random2 7s infinite;
+  background-color: hsl(360, 90%, 50%);
+}
+
+.ball-3 {
+  background-color: hsl(420, 80%, 50%);
+  animation: random3 1s infinite;
+  }
+
+.ball-4 {
+  background-color: hsl(300, 70%, 50%);
+  animation: random4 0.5s infinite;
+  }
